<resources>
    <string name="app_name">Apophis</string>
    <string name="kakao_app_key">1a6153a079915abd92ab12375b709763</string>
    <string name="title_activity_second_day_chat">SecondDayChatActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="chat_title">아포니머스의 이야기</string>
    <string name="chat_message_hint">선택지를 골라주세요</string>
    <string name="compass_direction">동쪽</string>
    <string name="camera_send">보내기</string>
    <string name="camera_retake">다시 찍기</string>

    <string name="find_light_me_title">밝은 나의 모습에 대해 적어보세요</string>
    <string name="find_dark_me_title">어두운 나의 모습에 대해 적어보세요</string>

    <string name="music_1">미리 맞이하는 당신의 이른 죽음, 아포피스를 시작합니다.</string>
    <string name="music_2">주변이 조용하고 집중할 수 있는 환경인지 확인해주세요!</string>
    <string name="music_off">[음표버튼을 눌러 배경음악을 끌 수 있어요]</string>

    <string name="incoming_call">수신전화</string>
    <string name="caller">익명의 누군가</string>
    <string name="phone_number">알 수 없는 번호</string>
    <string name="first_call">첫번째 통화</string>
    <string name="answer">응답</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="onboarding_start">시작하기</string>
    <string name="start_title">아포니머스가 남긴 메세지</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="news_title">[속보] 7일 뒤 아포피스 충돌</string>
    <string name="livechat">실시간 채팅</string>
    <string name="news_view">조희수 109,087,340회 실시간</string>


    <string name="first_ending_message1">멸망까지 엿새</string>


    <string name="second_ending_message1">멸망까지 닷새</string>
    <string name="second_ending_message2">여러 갈래 길에 쌓이는 눈 : 당신의 가치</string>
    <string name="second_ending_message3">너에게는 어떤 모습들이 있니? 빛이든 그림자든.</string>
    <string name="second_ending_message4">그 모습들은 전부 너일테니까.</string>


    <string name="seventh_ending_message1">멸망의 날</string>
    <string name="seventh_ending_message2">아포피스, 끝은 또 다른 시작 : 당신의 말</string>
    <string name="seventh_ending_message3">사실 소행성은 언제나 우리 곁에 있었던 거야.</string>

    <string name="sixth_ending_message1">멸망까지 하루</string>
    <string name="sixth_ending_message2">빛을 따라가는 등대지기 : 당신의 순간</string>
    <string name="sixth_ending_message3">모든 것이 낯설어지는 건</string>
    <string name="sixth_ending_message4">아주 사소한 것에서 시작해.</string>

</resources>